ADD_EXECUTABLE(XdmfFormatExample XdmfFormatExample.cxx)

TARGET_LINK_LIBRARIES(XdmfFormatExample Xdmf)
IF(XDMF_HAS_NDGM)
  TARGET_LINK_LIBRARIES(XdmfFormatExample ${NDGM_LIBRARY} ${CMAKE_DL_LIBS})
ENDIF(XDMF_HAS_NDGM)

ADD_EXECUTABLE(XdmfHDFCp XdmfHDFCp.cxx)

TARGET_LINK_LIBRARIES(XdmfHDFCp Xdmf)
IF(XDMF_HAS_NDGM)
  TARGET_LINK_LIBRARIES(XdmfHDFCp ${NDGM_LIBRARY} ${CMAKE_DL_LIBS})
ENDIF(XDMF_HAS_NDGM)

IF (XDMF_SYSTEM_HDF5_IS_PARALLEL)
	ADD_EXECUTABLE(XdmfMpiExample XdmfMpiExample.cxx)
	TARGET_LINK_LIBRARIES(XdmfMpiExample Xdmf)
	IF(XDMF_HAS_NDGM)
  		TARGET_LINK_LIBRARIES(XdmfMpiExample ${NDGM_LIBRARY} ${CMAKE_DL_LIBS})
	ENDIF(XDMF_HAS_NDGM)
ENDIF (XDMF_SYSTEM_HDF5_IS_PARALLEL)
